# GitEase

./: CMakeLists.txt  Resources.cmake  backend.cmake  libgit.cmake
Ext/openssl/etc/ssl/misc/: CA.pl
Ext/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
Ext/openssl/share/doc/openssl/html/man1/: openssl-cmp.html
Ext/openssl/share/doc/openssl/html/man3/: EVP_EncryptInit.html
Ext/openssl/share/man/man1/: CA.pl.1  asn1parse.1  ca.1  crl.1  dsaparam.1  ec.1  engine.1  genrsa.1  nseq.1  ocsp.1  openssl-ciphers.1  openssl-cms.1  openssl-crl2pkcs7.1  openssl-dgst.1  openssl-dhparam.1  openssl-dsa.1  openssl-ecparam.1  openssl-enc.1  openssl-errstr.1  openssl-gendsa.1  openssl-genpkey.1  openssl-list.1  openssl-pkcs7.1  openssl-pkcs8.1  openssl-pkey.1  openssl-prime.1  openssl-rand.1  openssl-rehash.1  openssl-req.1  openssl-rsa.1  openssl-s_client.1  openssl-s_server.1  openssl-sess_id.1  openssl-ts.1  openssl-version.1  openssl.1  passwd.1  pkcs12.1  pkeyparam.1  pkeyutl.1  (+10 more)
Ext/openssl/share/man/man3/: ASN1_ENUMERATED_set.3  ASN1_ITEM_lookup.3  ASN1_OBJECT_free.3  ASN1_STRING_TABLE.3  ASN1_STRING_set.3  ASN1_STRING_type_new.3  ASN1_TIME_to_generalizedtime.3  ASN1_TYPE_unpack_sequence.3  ASN1_generate_v3.3  ASN1_tag2str.3  ASYNC_WAIT_CTX_get_all_fds.3  ASYNC_cleanup_thread.3  BF_set_key.3  BIO_ADDRINFO_socktype.3  BIO_ADDR_new.3  BIO_do_connect.3  BIO_f_base64.3  BIO_f_null.3  BIO_get_callback_arg.3  BIO_get_md_ctx.3  BIO_get_retry_BIO.3  BIO_get_write_guarantee.3  BIO_meth_get_write_ex.3  BIO_method_type.3  BIO_new.3  BIO_new_CMS.3  BIO_new_file.3  BIO_parse_hostserv.3  BIO_pop.3  BIO_printf.3  BIO_s_mem.3  BIO_s_null.3  BIO_s_socket.3  BIO_set_buffer_read_data.3  BIO_set_cipher.3  BIO_set_fd.3  BIO_set_init.3  BIO_set_nbio_accept.3  BIO_socket.3  BIO_ssl_copy_session_id.3  (+427 more)
Ext/openssl/share/man/man5/: config.5  x509v3_config.5
Ext/openssl/share/man/man7/: Ed448.7  RAND.7  RAND_DRBG.7  RSA-PSS.7  SM2.7  X25519.7  bio.7  crypto.7  ct.7  des_modes.7  evp.7  ossl_store-file.7  ossl_store.7  passphrase-encoding.7  proxy-certificates.7  scrypt.7  ssl.7  x509.7
Ext/zlib/include/: zconf.h
Ext/zlib/lib/cmake/zlib/: ZLIB-shared-noconfig.cmake  ZLIB-shared.cmake  ZLIB-static-noconfig.cmake  ZLIB-static.cmake  ZLIBConfig.cmake  ZLIBConfigVersion.cmake
Ext/zlib/lib/pkgconfig/: zlib.pc
Qml/: Main.qml
Qml/Core/Controllers/: BranchController.qml  BundleController.qml  CommitController.qml  ConfigController.qml  DockController.qml  LayoutController.qml  PageController.qml  RemoteController.qml  RepositoryController.qml  ShellController.qml  StatusController.qml  UserProfileController.qml  WelcomeController.qml
Qml/Core/Models/: AppModel.qml  AppSettings.qml  AppearanceSettings.qml  Enums.qml  GeneralSettings.qml  Page.qml  PageLayout.qml  Repository.qml  UserProfile.qml
Qml/Core/Scripts/: GraphLayout.js  GraphUtils.js
Qml/Core/Services/: GitService.qml
Qml/Pages/: BlankPage.qml  CommittingPage.qml  DockAblePage.qml  GraphViewPage.qml  Page.qml  PageTabBar.qml  PagesSidebar.qml  UtilitiesPage.qml  WelcomePage.qml  welcomePage.qml
Qml/Style/: AppFontSize.qml  CMakeLists.txt  Colors.qml  FontTypes.qml  Icons.qml  Style.qml
Qml/Style/impl/: Calendar.qml  ComboBox.qml  ResizeHandle.qml  TextField.qml
Qml/UiCore/: UiSession.qml  UiSessionPopups.qml
Qml/View/: Header.qml  MainWindow.qml  WindowsButton.qml  WindowsHeader.qml
Qml/View/Components/: ProgressButton.qml
Qml/View/Components/Base/: EmptyStateView.qml  FormInputField.qml  PageHeader.qml  RepositoryListItem.qml  TabbedView.qml
Qml/View/Components/Commits/: CommitsListView.qml
Qml/View/Components/Diff/: DiffView.qml  StackedDiff.qml  StripedBackground.qml
Qml/View/Components/Docks/: CommitGraphDock.qml  CommitGraphSimulator.qml  FileChangesDock.qml  ImportExportBundleDock.qml  SimpleDock.qml
Qml/View/Components/FileLists/: ActionIconButton.qml  ChangesFileLists.qml  FileListRow.qml  FileListSection.qml  StagedFileListRow.qml  StagedFileListSection.qml  UnstagedFileListRow.qml  UnstagedFileListSection.qml
Qml/View/Components/Graph/: GraphView.qml
Qml/View/Components/ImportExport/: ExportView.qml  ImportExportBundle.qml  ImportView.qml
Qml/View/Components/Navigation/: NavigationRail.qml  PagesRail.qml
Qml/View/Components/PageDockZone/: DropZoneIndicator.qml  PageDropZone.qml  TabGroupSide.qml
Qml/View/Components/Profile/: SetupProfileForm.qml  UserInfoSelector.qml  UserInfoSelectorItem.qml
Qml/View/Components/Repository/: DiffRow.qml  RecentRepositoriesList.qml  RepositoriesSidebar.qml  RepositorySelector.qml  SideBySideDiff.qml
Qml/View/Components/Settings/: CheckboxItem.qml  ComboboxItem.qml  PathSelectorItem.qml  TextFieldItem.qml
Qml/View/Components/WelcomeContents/: OpenRepositoryContent.qml  SetupProfileContent.qml  WelcomeContent.qml
Qml/View/Popups/: IPopup.qml  ItemSelectorPopup.qml  RepositorySelectorPopup.qml  SettingsPopup.qml  UserAuthenticationPopup.qml  UserInfoSelectionPopup.qml
Res/: CMakeLists.txt
Src/: GitWrapperCPP.cpp  GitWrapperCPP.h  main.cpp
Src/Git/: GitBranch.cpp  GitBranch.h  GitBundle.cpp  GitBundle.h  GitCommit.cpp  GitCommit.h  GitConfig.cpp  GitConfig.h  GitRemote.cpp  GitRemote.h  GitRepository.cpp  GitRepository.h  GitResult.cpp  GitResult.h  GitStatus.cpp  GitStatus.h  GitUtils.cpp  GitUtils.h  GitWrapperCPP.cpp  GitWrapperCPP.h  IGitController.cpp  IGitController.h
Src/Git/Models/: Commit.cpp  Commit.h  Config.cpp  Config.h  GitDiff.cpp  GitDiff.h  GitFileStatus.cpp  GitFileStatus.h  Remote.cpp  Remote.h  Repository.cpp  Repository.h
Src/Utilities/FileManager/: FileIO.cpp  FileIO.hpp
Src/Utilities/windowsManager/: borderlesswindowhelper.cpp  borderlesswindowhelper.h  windowcontroller.hpp
